[gd_scene load_steps=12 format=2]

[ext_resource path="res://HUD and Menus/Themes/general_theme.tres" type="Theme" id=1]
[ext_resource path="res://HUD and Menus/Scripts/Pause_Menu.gd" type="Script" id=2]
[ext_resource path="res://HUD and Menus/options/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD and Menus/smart_ui_nodes/smart_button/SmartButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD and Menus/Icons/gear.png" type="Texture" id=6]
[ext_resource path="res://HUD and Menus/Icons/play.png" type="Texture" id=7]
[ext_resource path="res://HUD and Menus/Icons/x.png" type="Texture" id=8]
[ext_resource path="res://HUD and Menus/Icons/exit.png" type="Texture" id=9]
[ext_resource path="res://HUD and Menus/pause_menu/menu_unpause.wav" type="AudioStream" id=10]
[ext_resource path="res://HUD and Menus/pause_menu/menu_pause.wav" type="AudioStream" id=11]

[node name="Pause_Menu" type="ColorRect"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.705882 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
PAUSE_SOUND = ExtResource( 11 )
UNPAUSE_SOUND = ExtResource( 10 )

[node name="items" type="VBoxContainer" parent="."]
margin_left = 142.0
margin_top = 10.0
margin_right = 241.0
margin_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="items"]
margin_top = 36.0
margin_right = 117.0
margin_bottom = 50.0
text = "Paused"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="items"]
margin_top = 54.0
margin_right = 117.0
margin_bottom = 55.0

[node name="resume" parent="items" instance=ExtResource( 4 )]
margin_top = 59.0
margin_right = 117.0
margin_bottom = 81.0
text = "Resume"
icon = ExtResource( 7 )
flat = true

[node name="options" parent="items" instance=ExtResource( 4 )]
margin_top = 85.0
margin_right = 117.0
margin_bottom = 107.0
text = "Options"
icon = ExtResource( 6 )
flat = true

[node name="return_to" parent="items" instance=ExtResource( 4 )]
margin_top = 111.0
margin_right = 117.0
margin_bottom = 133.0
text = "Return to Hub"
icon = ExtResource( 9 )
flat = true

[node name="quit" parent="items" instance=ExtResource( 4 )]
margin_top = 137.0
margin_right = 117.0
margin_bottom = 159.0
text = "Quit"
icon = ExtResource( 8 )
flat = true

[node name="Options" parent="." instance=ExtResource( 3 )]

[node name="sound_player" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="items/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="items/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="items/return_to" to="." method="_on_return_to_pressed"]
[connection signal="pressed" from="items/quit" to="." method="_on_quit_pressed"]
[connection signal="closed" from="Options" to="." method="_on_Options_closed"]
